Adicionando position fixed e z-index 5 no Header

--- a/public/stylesheets/header.css
+++ b/public/stylesheets/header.css
@@ -1,12 +1,13 @@
 
 
 header {
-    position: absolute;
+    position: fixed;
     width: 100%;
     height: 165.59px;
     left: 0px;
-    top: -2.59px;
+    top: 0;
     background: #323050;
+    z-index: 5;
 }
 
 header div img {
